made flexboxes and buttons for webite... WEBSITE WILL NOT LOOK LIKE THIS

--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Document</title>
+     <link rel="stylesheet" type="text/css" href="style.css">
      <script type="text/javascript" src="project1.js"></script>
 
 </head>
 <body>
-     <button onclick="startBlackJack()">Start Game</button>
      
+<header><h1>Welcome to Yanks Palace Casino In Las Vegas Nevada</h1>
 
+<div id="flexbox">
+     <article><h1><img src="https://i.imgur.com/Ew3SiSb.jpg" class= "one"> "put cards and game here</h1></article>
+     <nav><h3>enter hit, stay, and start new game here</h3><button onclick="startBlackJack()">Start Game</button>
+          <button>hit me</button> <button>stay</button><button>cash out</button>
+     </nav>
+     <aside><h2> track of current bank acount balance and current card value counter here</h2> </aside>
+     </div>
+     <div id="footerbox">
+<footer>Come to Yanks palace (formerly known as ceasars palace) in person for an awesome time</footer></div>
+</body>
 
 
 
