--- a/index.html
+++ b/index.html
@@ -7,24 +7,19 @@
      <title>Document</title>
      <link rel="stylesheet" type="text/css" href="style.css">
      <script type="text/javascript" src="project1.js"></script>
-
-</head>
-<body>
-     
-<header><h1>Welcome to Yanks Palace Casino In Las Vegas Nevada</h1>
-
-<div id="flexbox">
-     <article><h1><img src="https://i.imgur.com/Ew3SiSb.jpg" class= "one"> "put cards and game here</h1></article>
-     <nav><h3>enter hit, stay, and start new game here</h3><button onclick="startBlackJack()">Start Game</button>
-          <button>hit me</button> <button>stay</button><button>cash out</button>
-     </nav>
-     <aside><h2> track of current bank acount balance and current card value counter here</h2> </aside>
-     </div>
-     <div id="footerbox">
-<footer>Come to Yanks palace (formerly known as ceasars palace) in person for an awesome time</footer></div>
-</body>
-
-
-
-</body>
-</html>
+     <!doctype html>
+     <title>Yanks Palace</title>
+     <body>
+          <body>
+           <nav class="outer-col-1"><h3>enter hit, stay, and start new game here</h3><button onclick="startBlackJack()">Start Game</button>
+                   <button>hit me</button> <button>stay</button><button>cash out</button></nav>
+           <div class="outer-col-2">
+                <header>Welcome to Yanks Palace Casino In Las Vegas Nevada</header>
+             <div class="inner-row">
+               <div class="inner-col">
+                  <article><img src="https://i.imgur.com/Ew3SiSb.jpg" class= "one"> "put cards and game here. once player clicks start game picture switches to black jack game</article>
+                     <footer>thank you for visiting yanks casino</footer>
+               </div>
+                  <aside>track of current bank acount balance and current card value counter here</aside>
+             </div>
+           </div>
