things i need help with

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       <button class="hit">hit me</button> <button class="nomore">stay</button><button>cash out</button>
    </nav>
    <div class="outer-col-2">
-      <header>Welcome to Yanks Palace Casino In Las Vegas Nevada</header>
+      <header><img src="https://i.imgur.com/G5dlr6i.jpg" max-width:100% max-height:100%></header>
       <div class="inner-row">
          <div class="inner-col">
             <article id= "gameboard"> <img src="https://i.imgur.com/Ew3SiSb.jpg" class="one"> "put cards and game here. once player clicks start
                game picture switches to black jack game</article>
             <footer>thank you for visiting yanks casino</footer>
          </div>
-         <aside>track of current bank acount balance and current card value counter here</aside>
+         <aside>Yanks palace used to be called ceasars palace but the coding mastermind, entreprenur, and billionaire Yank Stankovich bought the company after the lettuce used little ceasar's salad sales tanked from an ecoli outbreak </aside>
       </div>
    </div>
 </body>
