--- a/index.html
+++ b/index.html
@@ -14,20 +14,25 @@
 
 <body>
    <nav class="outer-col-1">
-      <h3>enter hit, stay, and start new game here</h3><button onclick="startBlackJack()">Start Game</button><button
-         onclick="betMoney()">bet money</button>
-
-      <button class="hit">hit me</button> <button class="nomore">stay</button><button>cash out</button>
+      <h3>enter hit, stay, and start new game here</h3>
+      <!-- Changed buttons classes to ID's so they are uniquely targetable: -->
+      <button id="start-game">Start Game</button>
+      <button id="bet">bet money</button>
+      <button id="hit">hit me</button>
+      <button id="nomore">stay</button><button>cash out</button>
    </nav>
    <div class="outer-col-2">
       <header><img src="https://i.imgur.com/G5dlr6i.jpg" max-width:100% max-height:100%></header>
       <div class="inner-row">
          <div class="inner-col">
-            <article id= "gameboard"> <img src="https://i.imgur.com/Ew3SiSb.jpg" class="one"> "put cards and game here. once player clicks start
+            <article id="gameboard"> <img src="https://i.imgur.com/Ew3SiSb.jpg" class="one"> "put cards and game here.
+               once player clicks start
                game picture switches to black jack game</article>
             <footer>thank you for visiting yanks casino</footer>
          </div>
-         <aside>Yanks palace used to be called ceasars palace but the coding mastermind, entreprenur, and billionaire Yank Stankovich bought the company after the lettuce used little ceasar's salad sales tanked from an ecoli outbreak </aside>
+         <aside>Yanks palace used to be called ceasars palace but the coding mastermind, entreprenur, and billionaire
+            Yank Stankovich bought the company after the lettuce used little ceasar's salad sales tanked from an ecoli
+            outbreak </aside>
       </div>
    </div>
 </body>
