--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <button id="start-game1">Start Game</button>
       <button id="bet">bet money</button>
       <button id="hit">hit me</button>
-      <button id="nomore">stay</button><button>cash out</button>
+      <button id="nomore">stay</button>
    </nav>
    <div class="outer-col-2">
       <header><img src="https://i.imgur.com/G5dlr6i.jpg" max-width:100% max-height:100%></header>
