--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
       <h3>enter hit, stay, and start new game here</h3>
       <!-- Changed buttons classes to ID's so they are uniquely targetable: -->
       <button id="start-game1">Start Game</button>
-      <button id="bet">bet money</button>
       <button id="hit">hit me</button>
       <button id="nomore">stay</button>
    </nav>
    <div class="outer-col-2">
-      <header><img src="https://i.imgur.com/G5dlr6i.jpg" max-width:100% max-height:100%></header>
+      <header><h1>Welcome to Yanks Palace Casino!!!!</h1></header>
       <div class="inner-row">
          <div class="inner-col">
             <article id="gameboard"><h3> player</h3><div id="playerboard"></div> <h3>dealer</h3><div id= "dealerboard"></div> <img src="https://i.imgur.com/Ew3SiSb.jpg" class="one"> "put cards and game here.
