--- a/playingcards/test.html
+++ b/playingcards/test.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Document</title>
-     <link rel="stylesheet" type="text/css" href="test.css">
-     <script type="text/javascript" src="test.js"></script>
-     <!doctype html>
-     <title>Yanks Palace</title>
-     <body>
-          <body>
-           <nav class="outer-col-1"><h3>enter hit, stay, and start new game here</h3><button onclick="startBlackJack()">Start Game</button><button onclick="betMoney()">bet money</button>
-                   <button>hit me</button> <button>stay</button><button>cash out</button></nav>
-           <div class="outer-col-2">
-                <header>Welcome to Yanks Palace Casino In Las Vegas Nevada</header>
-             <div class="inner-row">
-               <div class="inner-col">
-                  <article><img src="https://i.imgur.com/Ew3SiSb.jpg" class= "one"> "put cards and game here. once player clicks start game picture switches to black jack game</article>
-                     <footer>thank you for visiting yanks casino</footer>
-               </div>
-                  <aside>track of current bank acount balance and current card value counter here</aside>
-             </div>
-           </div>
+   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Document</title>
+   <link rel="stylesheet" type="text/css" href="test.css">
+   <script type="text/javascript" src="test.js"></script>
+   <title>Yanks Palace</title>
+</head>
+
+<body>
+   <nav class="outer-col-1">
+      <h3>enter hit, stay, and start new game here</h3>
+      <!-- Changed buttons classes to ID's so they are uniquely targetable: -->
+      <button id="start-game1">Start Game</button>
+      <button id="bet">bet money</button>
+      <button id="hit">hit me</button>
+      <button id="nomore">stay</button>
+   </nav>
+   <div class="outer-col-2">
+      <header><img src="https://i.imgur.com/G5dlr6i.jpg" max-width:100% max-height:100%></header>
+      <div class="inner-row">
+         <div class="inner-col">
+            <article id="gameboard"><h3> player</h3><div id="playerboard"></div> <h3>dealer</h3><div id= "dealerboard"></div> <img src="https://i.imgur.com/Ew3SiSb.jpg" class="one"> "put cards and game here.
+               once player clicks start
+               game picture switches to black jack game</article>
+            <footer>thank you for visiting yanks casino</footer>
+         </div>
+         <aside>Yanks palace used to be called ceasars palace but the coding mastermind, entreprenur, and billionaire
+            Yank Stankovich bought the company after the lettuce used little ceasar's salad sales tanked from an ecoli
+            outbreak </aside>
+      </div>
+   </div>
+</body>
+</html>
